[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/Retina/towerDefense_tile249.png" type="Texture" id=2]

[node name="HUD" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 13.0
margin_top = 13.0
margin_right = 189.0
margin_bottom = 27.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="HBoxContainer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Cash: 0"

[node name="LivesLabel" type="Label" parent="HBoxContainer"]
margin_left = 61.0
margin_right = 110.0
margin_bottom = 14.0
text = "Lives: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveLabel" type="Label" parent="HBoxContainer"]
margin_left = 125.0
margin_right = 176.0
margin_bottom = 14.0
text = "Wave: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyRect" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyPanel" type="Panel" parent="BuyRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -256.0
margin_right = 128.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton1" type="TextureButton" parent="BuyRect/BuyPanel"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
hint_tooltip = "{TOOLTIP}"
texture_normal = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BuyRect/BuyPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -64.0
margin_right = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartWaveButton" type="Button" parent="BuyRect/BuyPanel/HBoxContainer"]
margin_right = 256.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "START WAVE"
[connection signal="pressed" from="BuyRect/BuyPanel/BuyButton1" to="." method="_on_BuyButton1_pressed"]
[connection signal="pressed" from="BuyRect/BuyPanel/HBoxContainer/StartWaveButton" to="." method="_on_StartWaveButton_pressed"]
